Prevent chip text from wrapping.

--- a/src/styles/components/chip.scss
+++ b/src/styles/components/chip.scss
@@ -12,6 +12,7 @@
   border-radius: pxToRem(4);
   border: pxToRem(1) solid $colour-vivid-cerulean;
   cursor: default;
+  white-space: nowrap;
 
   svg {
     margin-top: -0.2rem;
